# capture-studio-v4

./: .cursorrules  .gitignore  CMakeLists.txt  GIT_GUIDELINES.md  README.md  STABILITY.md  environment.yml  requirements.txt
Documents/: Project Structure.md  architecture.md  conda-env.yml  contributing.md  development.md  readme.md  requirements-dev.md  requirements.txt
src/: main.py  resources.qrc  resources_rc.py
src/capture/: __init__.py  capture_manager.py  screen_capture.py
src/qml/: main.qml  main.qml.backup  qmldir
src/qml/components/: AreaSelector.qml  CustomToolButton.qml  FloatingToolbar.qml  RecordingControls.qml  WindowSelector.qml
tests/: __init__.py  conftest.py  test_main.py
